--- a/JSalura01/cap4/introducao-javascript/index.html
+++ b/JSalura01/cap4/introducao-javascript/index.html
@@ -98,7 +98,7 @@
     </form>
 </section>
 
-		<script src="js/principal.js" ></script>
-
+		<script src="js/calculaimc.js" ></script>
+		<script src="js/form.js" ></script>
 	</body>
 </html>
