--- a/JSalura01/cap4/introducao-javascript/index.html
+++ b/JSalura01/cap4/introducao-javascript/index.html
@@ -37,7 +37,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" >
+						<tr class="paciente">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
@@ -45,7 +45,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" >
+						<tr class="paciente">
 							<td class="info-nome">Erica</td>
 							<td class="info-peso">54</td>
 							<td class="info-altura">1.64</td>
@@ -74,32 +74,46 @@
 		</main>
 
 		<!-- ... -->
-<section class="container">
-    <h2 id="titulo-form">Adicionar novo paciente</h2>
-	<span id="erro"></span>
-    <form id="form-adiciona">
-        <div class="grupo">
-            <label for="nome">Nome:</label>
-            <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
-        </div>
-        <div class="grupo">
-            <label for="peso">Peso:</label>
-            <input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
-        </div>
-        <div class="grupo">
-            <label for="altura">Altura:</label>
-            <input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
-        </div>
-        <div class="grupo">
-            <label for="gordura">% de Gordura:</label>
-            <input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
-        </div>
+		<section class="container">
+			<h2 id="titulo-form">Adicionar novo paciente</h2>
+			<span id="erro"></span>
+			<form id="form-adiciona">
+				<div class="grupo">
+					<label for="nome">Nome:</label>
+					<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
+				</div>
+				<div class="grupo">
+					<label for="peso">Peso:</label>
+					<input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+				</div>
+				<div class="grupo">
+					<label for="altura">Altura:</label>
+					<input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
+				</div>
+				<div class="grupo">
+					<label for="gordura">% de Gordura:</label>
+					<input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
+				</div>
 
-        <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
-    </form>
-</section>
-
+				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+			</form>
+		</section>
+		<section id="remoçao">
+			<h2>Remover paciente</h2>
+			<form>
+				<select name="clientes" id="iclientes">
+					<option value="" selected>--- select ---</option>
+					<option value="Paulo">Paulo</option>
+					<option value="João">João</option>
+					<option value="Erica">Erica</option>
+					<option value="Douglas">Douglas</option>
+					<option value="Tatiana">Tatiana</option>
+				</select>
+			</form>
+			<input type="button" value="Deletar cliente" onclick="deletar()" id="botaoremove">
+		</section>
 		<script src="js/calculaimc.js" ></script>
 		<script src="js/form.js" ></script>
+		<script src="js/remover-pacientes.js"></script>
 	</body>
 </html>
