--- a/JSalura01/cap4/introducao-javascript/index.html
+++ b/JSalura01/cap4/introducao-javascript/index.html
@@ -18,6 +18,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtre:</label>
+				<input type="text" name="filtro" id="ifiltro" placeholder="Digite o nome do paciente">
 				<table>
 					<thead>
 						<tr>
@@ -101,5 +103,6 @@
 		<script src="js/calculaimc.js" ></script>
 		<script src="js/form.js" ></script>
 		<script src="js/remover-pacientes.js"></script>
+		<script src="js/filtro.js"></script>
 	</body>
 </html>
