--- a/JSalura01/cap4/introducao-javascript/index.html
+++ b/JSalura01/cap4/introducao-javascript/index.html
@@ -71,7 +71,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
 
@@ -104,5 +104,6 @@
 		<script src="js/form.js" ></script>
 		<script src="js/remover-pacientes.js"></script>
 		<script src="js/filtro.js"></script>
+		<script src="js/buscarpacientes.js"></script>
 	</body>
 </html>
