--- a/JSalura01/cap4/introducao-javascript/index.html
+++ b/JSalura01/cap4/introducao-javascript/index.html
@@ -71,6 +71,7 @@
 						</tr>
 					</tbody>
 				</table>
+				<span id="errobusca" class="erro"></span>
 				<button id="buscar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
@@ -78,7 +79,7 @@
 		<!-- ... -->
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
-			<span id="erro"></span>
+			<span id="erro" class="erro"></span>
 			<form id="form-adiciona">
 				<div class="grupo">
 					<label for="nome">Nome:</label>
