--- a/JSorientacaoobjeto/index.html
+++ b/JSorientacaoobjeto/index.html
@@ -7,6 +7,9 @@
     <title>Orientação a objeto</title>
 </head>
 <body>
+    
+    <script src="Cliente.js"></script>
+    <script src="ContaCorrente.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
