--- a/flexbox/estudandoflex.html
+++ b/flexbox/estudandoflex.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div id="container">
-        <div id="elemento1" onmouseenter="crescer(1)" onmouseleave="diminuir(1)"></div>
-        <div id="elemento2" onmouseenter="crescer(2)" onmouseleave="diminuir(2)"></div>
-        <div id="elemento3" onmouseenter="crescer(3)" onmouseleave="diminuir(3)"></div>
-        <div id="elemento4" onmouseenter="crescer(4)" onmouseleave="diminuir(4)"></div>
+        <div id="elemento1" class="Item" onmouseenter="crescer(1)" onmouseleave="diminuir(1)"></div>
+        <div id="elemento2" class="Item" onmouseenter="crescer(2)" onmouseleave="diminuir(2)"></div>
+        <div id="elemento3" class="Item" onmouseenter="crescer(3)" onmouseleave="diminuir(3)"></div>
+        <div id="elemento4" class="Item" onmouseenter="crescer(4)" onmouseleave="diminuir(4)"></div>
     </div>
     <script>
         function crescer(n) {
