--- a/aluraplay-requisicoes-main/index.html
+++ b/aluraplay-requisicoes-main/index.html
@@ -80,8 +80,7 @@
             </div>
         </li>
     </ul>
-    <script src="./js/conectaapi.js"></script>
-    <script src="./js/mostraVideos.js"></script>
+    <script src="./js/mostraVideos.js" type="module"></script>
 </body>
 
 </html>
