--- a/aluraplay-requisicoes-main/index.html
+++ b/aluraplay-requisicoes-main/index.html
@@ -38,6 +38,7 @@
 
     </ul>
     <script src="./js/mostraVideos.js" type="module"></script>
+    <script src="./js/buscaVideos.js" type="module"></script>
 </body>
 
 </html>
