--- a/SVG/svg-css-animacao-master/index.html
+++ b/SVG/svg-css-animacao-master/index.html
@@ -35,7 +35,7 @@
         </svg>
           
     </header>
-    <section class="dicas">
+    <section id="secDicas" class="dicas">
       <h1>O verão chegou, se liga nessas dicas!</h1>
       <div class="container-cards">
         <article class="card card-esq">
@@ -55,6 +55,9 @@
         </article>
       </div>
     </section>
+    <div id="teste">
+
+    </div>
     <script type="module" src="./js/script.js"></script>
 </body>
 </html>
